<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">达达肠粉店</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="rbOne">首页</string>
    <string name="rbTwo">设置</string>
    <string name="screen_name">昵称</string>
    <string name="zero">0</string>
    <string name="friends">朋友</string>
    <string name="orderlist">订单</string>
    <string name="collection">收藏</string>
    <string name="login">登陆</string>
    <string name="data_not_availabe">暂无数据</string>
    <string name="rbOneComments">评论</string>
    <string name="rbTwoComments">赞</string>
    <string name="bbOne">预定</string>
    <string name="bbTwo">评论</string>
    <string name="bbThree">赞</string>
    <string name="comfirmcomment">确认提交</string>
    <string name="inputusername">输入用户名</string>
    <string name="inputpassword">输入密码</string>
    <string name="repassword">确认密码</string>
    <string name="inputtelephone">输入电话</string>
    <string name="username">用户名</string>
    <string name="alreadylike">点过赞</string>
    <string name="time">0000-00-00 00:00</string>
    <string name="login">登陆</string>
    <string name="regist">注册</string>
    <string name="confirm">确认</string>
    <string name="cancle">取消</string>
    <string name="orders">订单</string>
    <string name="unit_price">单价</string>
    <string name="total_price">总价</string>
    <string name="amount">数量</string>
    <string name="dish_name">菜名</string>

</resources>
