<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal" >
    <Button
   	        android:id="@+id/bbOne"
   	        style="@style/intent_bottom_btn_style"
   	        android:layout_weight="1"
   	        android:text="@string/bbOne" />

   	    <Button
   	        android:id="@+id/bbTwo"
   	        style="@style/intent_bottom_btn_style"
   	        android:layout_weight="1"
   	        android:text="@string/bbTwo" />

   	    <Button
   	        android:id="@+id/bbThree"
   	        style="@style/intent_bottom_btn_style"
   	        android:layout_weight="1"
   	        android:text="@string/bbThree" />

</LinearLayout>
