<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
         android:id="@+id/photograph"
         android:layout_margin="5px"
         android:layout_width="48dp"
         android:layout_height="48dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

		    <TextView
		        android:id="@+id/title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/dish_name"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    <TextView
		        android:id="@+id/createtime"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
				android:textColor="#CCCCCC"
		        android:text="2015-01-01"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
    

        <LinearLayout
        	android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
		        android:id="@+id/text1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/unit_price"
				android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/unit_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="￥3.0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/solid_saffron" />
            <TextView
		        android:id="@+id/text2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingLeft="20dp"
		        android:text="@string/amount"
				android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/solid_saffron" />

        </LinearLayout>
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
            <TextView
		        android:id="@+id/text3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/total_price"
				android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="￥9.0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/solid_saffron" />
        </LinearLayout>
    </LinearLayout>
    

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:visibility="invisible"/>
</LinearLayout>
